--- a/website/static/style.css
+++ b/website/static/style.css
@@ -23,7 +23,7 @@ html{
 }
 section{
     padding: 4% 6%;
-    background-image: url('images/bg.avif');
+    background-image: url('');
     background-size: cover;
     background-repeat: no-repeat;
 }
